clusters/vcluster-app/cloudflare-gateway-canary.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloudflare-gateway-canary
  namespace: feed-reader
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cloudflare-gateway
      name: cloudflare
      sectionName: http
  hostnames:
    - gateway-canary-app.nakatanakatana.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: feed-reader
          port: 8080
