clusters/vcluster-app/nostr-nip05.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nostr-nip05
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nostr-nip05
  namespace: nostr-nip05
spec:
  selector:
    matchLabels:
      run: nostr-nip05
  replicas: 2
  template:
    metadata:
      labels:
        run: nostr-nip05
    spec:
      containers:
      - name: nostr-nip05
        image: ghcr.io/nakatanakatana/nip05:0.12.1@sha256:fb49cff35561c6bb695f6a414d0eda812d839a5461b18f696e467ed2969f75b2
        command: ["/app/nip05"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nostr-nip05
  namespace: nostr-nip05
  labels:
    run: nostr-nip05
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: nostr-nip05
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cf-ingress-nostr-nip05
  namespace: nostr-nip05
spec:
  parentRefs:
    - name: cloudflare-app
      namespace: cloudflare-gateway
      sectionName: http
  hostnames:
    - nakatanakatana.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nostr-nip05
          port: 8080
